Add new property pages and update image URL handling
- Updated `FullImageUrl` property in multiple files to include a forward slash between `AppSettings.ApiUrl` and `ImageUrl`.
- Wrapped `Home` tab in `CustomTabbedPage.xaml` with a `NavigationPage` and set `BarBackground` and `BarTextColor`.
- Modified `Home.xaml` to hide navigation bar and added `SelectionMode` and `SelectionChanged` event handlers to `CollectionView` elements.
- Corrected `FullImageUrl` binding to `FullImageUrls` in `Home.xaml`.
- Refactored methods and added event handlers in `Home.xaml.cs`.
- Updated `RealEstates.csproj` to include new XAML pages for compilation.
- Added `PropertiesListPage.xaml` and `PropertiesListPage.xaml.cs` to display a list of properties by category.
- Added `PropertyDetailedPage.xaml` and `PropertyDetailedPage.xaml.cs` to display detailed information about a selected property.

--- a/RealEstates/RealEstates.csproj
+++ b/RealEstates/RealEstates.csproj
@@ -76,6 +76,12 @@
 	  <MauiXaml Update="Pages\LoginPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\PropertiesListPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\PropertyDetailedPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\RegisterPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
